syntax = "proto3";
package pb;
option go_package = "./pb;pb";

message OrderInfo {
  string no = 1;
  string car_id = 2;
  float car_latitude = 3;
  float car_longitude = 4;
  int64 start_at = 5;
  int64 end_at = 6;
  int64 stop_pick_at = 7;
}
